# CodeRed-Server

./: docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.obsidian/: workspace.json
app/: config.py  locustfile.py  main.py
app/api/v1/endpoints/auth/: __init__.py  login.py  oauth.py  profile.py  register.py
app/api/v1/endpoints/submission/: routes.py
app/api/v1/endpoints/users/: __init__.py  upload_file.py
app/api/v2/endpoints/auth/: route.py
app/api/v2/endpoints/code_execution/: route.py
app/api/v2/endpoints/user/: route.py
app/core/: auth.py  cloudinary.py  event_listener.py  exceptions.py  websocket.py  ws_manager.py
app/models/: submission.py
app/new_services/: auth_service.py  code_analyze.py  execution_service.py  test_cases.py  upload_service.py  user_service.py
app/repositories/: auth_repo.py  submission_repo.py  testcase_repo.py  user_repo.py
app/schemas/: auth.py  execution.py  submission.py  user.py
app/services/: auth_service.py  google_auth.py  submission_service.py  user_service.py
app/services/webSocket/: presence_service.py  presence_service2.py
app/services/webSocket/matchmaking/: match_listener.py  match_service.py  matchmaking_service.py  matchmaking_worker.py
documents/.obsidian/: workspace.json
documents/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
documents/System Design/: Drawing 2026-02-28 15.14.09.excalidraw.md
documents/services/Excalidraw/: Drawing 2026-02-27 19.41.10.excalidraw.md
workers/: disconnect_listener.py  matchmaking_worker.py
