[project]
name = "codered"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "asyncpg==0.31.0",
    "authlib>=1.6.8",
    "bcrypt==5.0.0",
    "cachetools==6.2.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudinary>=1.44.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "cssselect==1.3.0",
    "cssutils==2.11.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "emails==0.6",
    "fastapi==0.104.1",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jose>=1.0.0",
    "lxml==6.0.2",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "more-itertools==10.8.0",
    "passlib==1.7.4",
    "premailer==3.10.0",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "uvicorn==0.24.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
